--- a/notebooks/01_generate-data.ipynb
+++ b/notebooks/01_generate-data.ipynb
@@ -41,21 +41,29 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import holidays\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "# Import necessary libraries\n",
+    "import pandas as pd                  # For working with tables (DataFrames)\n",
+    "import numpy as np                  # For numerical operations, arrays, random numbers\n",
+    "import holidays                     # For handling public holidays\n",
+    "import matplotlib.pyplot as plt     # For plotting charts\n",
+    "import seaborn as sns               # For enhanced chart visuals\n",
     "\n",
+    "# Set default plotting style\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# --- Параметри ---\n",
+    "# --- Parameters ---\n",
+    "# Define the date range for data generation (2 full years)\n",
     "start_date = '2023-01-01'\n",
     "end_date = '2024-12-31'\n",
+    "\n",
+    "# Generate a sequence of all dates between start and end\n",
     "dates = pd.date_range(start=start_date, end=end_date)\n",
+    "\n",
+    "# Total number of days in the period\n",
     "n_days = len(dates)\n",
     "\n",
-    "# --- Категорії і товари ---\n",
+    "# --- Product Categories and Items ---\n",
+    "# Define product categories with 5 example products per category (in Polish)\n",
     "categories = {\n",
     "    'Молочні продукти': [\n",
     "        'Piątnica Mleko 3.2%', 'Mlekovita Ser żółty plasterki', 'President Masło extra',\n",
@@ -86,13 +94,17 @@
     "    ]\n",
     "}\n",
     "\n",
+    "# --- Generate list of items ---\n",
     "items = []\n",
     "item_id = 1\n",
+    "\n",
+    "# Add the original items to the list\n",
     "for cat, names in categories.items():\n",
     "    for name in names:\n",
     "        items.append({'item_id': item_id, 'item_name': name, 'category': cat})\n",
     "        item_id += 1\n",
     "\n",
+    "# If less than 650 items, generate additional synthetic versions by appending \"Edycja N\"\n",
     "while len(items) < 650:\n",
     "    for cat, names in categories.items():\n",
     "        for name in names:\n",
@@ -102,11 +114,15 @@
     "            items.append({'item_id': item_id, 'item_name': new_name, 'category': cat})\n",
     "            item_id += 1\n",
     "\n",
+    "# Convert to DataFrame (first 650 items)\n",
     "items_df = pd.DataFrame(items[:650])\n",
     "\n",
+    "# --- Load Polish holidays for 2023 and 2024 ---\n",
     "pl_holidays = holidays.Poland(years=[2023, 2024])\n",
     "\n",
+    "# --- Function to generate daily sales for a specific item ---\n",
     "def sales_pattern_for_item(item_idx):\n",
+    "    # Define base daily sales level for each category\n",
     "    base_level = {\n",
     "        'Молочні продукти': 30,\n",
     "        'Консерви': 20,\n",
@@ -116,33 +132,56 @@
     "        'Вода': 25,\n",
     "        'Яйця': 18\n",
     "    }\n",
+    "\n",
+    "    # Get category and base sales level for the current item\n",
     "    cat = items_df.loc[item_idx, 'category']\n",
-    "    base = base_level.get(cat, 10)\n",
-    "    \n",
+    "    base = base_level.get(cat, 10)  # default if not found\n",
+    "\n",
+    "    # Trend: gradual increase over time\n",
     "    trend = np.linspace(base, base*1.3, n_days)\n",
+    "\n",
+    "    # Yearly seasonality (e.g., milk sells more in summer, toys more in December)\n",
     "    seasonality = 0.2 * base * np.sin(2 * np.pi * dates.dayofyear / 365.25 + item_idx)\n",
+    "\n",
+    "    # Weekly pattern (e.g., more sales on weekends)\n",
     "    week_season = 0.15 * base * np.sin(2 * np.pi * dates.dayofweek / 7 + item_idx)\n",
+    "\n",
+    "    # Random noise to make data more realistic\n",
     "    noise = np.random.normal(0, base*0.3, n_days)\n",
-    "    \n",
+    "\n",
+    "    # Combine all components\n",
     "    sales = trend + seasonality + week_season + noise\n",
-    "    \n",
+    "\n",
+    "    # Holiday adjustment function\n",
     "    def holiday_adj(date):\n",
+    "        # On public holidays, sales drop (e.g., stores may be closed)\n",
     "        if date in pl_holidays:\n",
     "            return 0.5\n",
-    "        for i in range(1,4):\n",
+    "        # Days before a holiday may see increased sales\n",
+    "        for i in range(1, 4):\n",
     "            if (date + pd.Timedelta(days=i)) in pl_holidays:\n",
-    "                return 1 + 0.3 * (4 - i)\n",
-    "        return 1.0\n",
-    "    \n",
+    "                return 1 + 0.3 * (4 - i)  # up to +0.9 three days before a holiday\n",
+    "        return 1.0  # no adjustment\n",
+    "\n",
+    "    # Apply holiday adjustments to each date\n",
     "    adjustments = np.array([holiday_adj(d) for d in dates])\n",
     "    sales *= adjustments\n",
+    "\n",
+    "    # Clip negative values to zero\n",
     "    sales = np.clip(sales, 0, None)\n",
+    "\n",
+    "    # Convert to integers\n",
     "    sales = sales.astype(int)\n",
+    "\n",
     "    return sales\n",
     "\n",
+    "# --- Generate complete sales dataset ---\n",
     "all_data = []\n",
     "for idx in range(len(items_df)):\n",
+    "    # Generate daily sales for one item\n",
     "    sales_qty = sales_pattern_for_item(idx)\n",
+    "\n",
+    "    # Create a DataFrame with all sales data for that item\n",
     "    item_data = pd.DataFrame({\n",
     "        'item_id': items_df.loc[idx, 'item_id'],\n",
     "        'item_name': items_df.loc[idx, 'item_name'],\n",
@@ -150,23 +189,30 @@
     "        'date': dates,\n",
     "        'sales_qty': sales_qty\n",
     "    })\n",
+    "\n",
+    "    # Add to the list of all items\n",
     "    all_data.append(item_data)\n",
     "\n",
+    "# Combine data for all items into one large DataFrame\n",
     "df_sales = pd.concat(all_data, ignore_index=True)\n",
     "\n",
-    "# --- Аналітика ---\n",
-    "\n",
-    "print(\"=== Інформація про датафрейм ===\")\n",
+    "# --- Basic analytics and checks ---\n",
+    "print(\"=== DataFrame Info ===\")\n",
+    "# Print general info about the dataframe: columns, datatypes, memory usage\n",
     "print(df_sales.info())\n",
     "\n",
-    "print(\"\\n=== Описова статистика по продажах ===\")\n",
+    "print(\"\\n=== Descriptive Statistics for Sales ===\")\n",
+    "# Print summary statistics for the 'sales_qty' column\n",
     "print(df_sales['sales_qty'].describe())\n",
     "\n",
-    "print(\"\\n=== Унікальні товари ===\", df_sales['item_id'].nunique())\n",
-    "print(\"=== Унікальні дати ===\", df_sales['date'].nunique())\n",
+    "print(\"\\n=== Unique Items ===\", df_sales['item_id'].nunique())\n",
+    "# Count number of unique items\n",
     "\n",
-    "df_sales.to_csv('sales_data.csv', index=False)\n",
-    "\n"
+    "print(\"=== Unique Dates ===\", df_sales['date'].nunique())\n",
+    "# Count number of unique dates (should match number of days in 2 years)\n",
+    "\n",
+    "# --- Export dataset to CSV file ---\n",
+    "df_sales.to_csv('sales_data.csv', index=False)\n"
    ]
   }
  ],
