--- a/notebooks/02_eda.ipynb
+++ b/notebooks/02_eda.ipynb
@@ -5,7 +5,14 @@
    "id": "5890c8a8",
    "metadata": {},
    "source": [
-    "# Travel Analys"
+    "## 📊 Exploratory Data Analysis (EDA)\n",
+    "\n",
+    "In this section, we perform a basic exploratory analysis of the generated `sales_data.csv` file to:\n",
+    "\n",
+    "- Understand the structure and volume of the dataset\n",
+    "- Inspect distribution of sales quantities\n",
+    "- Verify the number of unique products and dates\n",
+    "- Ensure data consistency before modeling or visualization\n"
    ]
   },
   {
