--- a/notebooks/01_generate-data.ipynb
+++ b/notebooks/01_generate-data.ipynb
@@ -1,15 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🧪 Synthetic Sales Data Generator for Retail Products (2023–2024)\n",
+    "\n",
+    "This script generates a **fully synthetic daily sales dataset** for a simulated retail environment in Poland.\n",
+    "\n",
+    "### ✅ Features:\n",
+    "- Covers the period from **January 1, 2023** to **December 31, 2024**\n",
+    "- Generates sales data for **650 unique products** across **7 categories**:\n",
+    "  - Dairy products, Canned food, Toys, Stationery, Alcohol, Water, Eggs\n",
+    "- Incorporates:\n",
+    "  - 📈 Sales trend over time\n",
+    "  - 📅 Weekly and yearly seasonality\n",
+    "  - 🎉 Public holidays (Polish) and their impact on sales\n",
+    "  - 🎲 Random noise for realism\n",
+    "\n",
+    "### 📦 Output:\n",
+    "A CSV file `sales_data.csv` is generated, containing:\n",
+    "- `item_id`, `item_name`, `category`, `date`, `sales_qty`\n",
+    "\n",
+    "This dataset can be used for:\n",
+    "- Time series forecasting\n",
+    "- Exploratory Data Analysis (EDA)\n",
+    "- Building dashboards or BI tools\n",
+    "- Prototyping demand prediction models (e.g., with Prophet, XGBoost)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Інформація про датафрейм ===\n",
+      "=== DataFrame Info ===\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 475150 entries, 0 to 475149\n",
       "Data columns (total 5 columns):\n",
@@ -24,19 +53,19 @@
       "memory usage: 18.1+ MB\n",
       "None\n",
       "\n",
-      "=== Описова статистика по продажах ===\n",
+      "=== Descriptive Statistics for Sales ===\n",
       "count    475150.000000\n",
-      "mean         21.605139\n",
-      "std          12.049867\n",
+      "mean         21.600015\n",
+      "std          12.049812\n",
       "min           0.000000\n",
       "25%          13.000000\n",
       "50%          19.000000\n",
       "75%          28.000000\n",
-      "max         134.000000\n",
+      "max         138.000000\n",
       "Name: sales_qty, dtype: float64\n",
       "\n",
-      "=== Унікальні товари === 650\n",
-      "=== Унікальні дати === 731\n"
+      "=== Unique Items === 650\n",
+      "=== Unique Dates === 731\n"
      ]
     }
    ],
@@ -214,6 +243,31 @@
     "# --- Export dataset to CSV file ---\n",
     "df_sales.to_csv('sales_data.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ✅ Data Generation Complete\n",
+    "\n",
+    "The synthetic dataset `sales_data.csv` has been successfully created with the following properties:\n",
+    "\n",
+    "### 📊 Dataset Summary:\n",
+    "- **Rows:** ~474,500 (650 items × ~730 days)\n",
+    "- **Columns:** `item_id`, `item_name`, `category`, `date`, `sales_qty`\n",
+    "- **Date range:** `2023-01-01` to `2024-12-31`\n",
+    "- **Daily sales values:** Simulated using trend + seasonality + holiday impact + noise\n",
+    "\n",
+    "### 📁 Next Steps:\n",
+    "You can now use this dataset for:\n",
+    "\n",
+    "- 📈 Time series modeling (Prophet, ARIMA, etc.)\n",
+    "- 📊 Visual analytics (with matplotlib, seaborn, or Power BI)\n",
+    "- 🧠 Machine learning projects in retail (demand forecasting, clustering, etc.)\n",
+    "- 🚀 Feeding into Streamlit / FastAPI dashboards\n",
+    "\n",
+    "> If needed, consider grouping the data by category or item for analysis and plotting trends over time.\n"
+   ]
   }
  ],
  "metadata": {
@@ -232,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
