--- a/notebooks/01_generate-data.ipynb
+++ b/notebooks/01_generate-data.ipynb
@@ -26,7 +26,7 @@
     "- Time series forecasting\n",
     "- Exploratory Data Analysis (EDA)\n",
     "- Building dashboards or BI tools\n",
-    "- Prototyping demand prediction models (e.g., with Prophet, XGBoost)\n"
+    "- Prototyping demand prediction models (e.g., with Prophet, XGBoost).\n"
    ]
   },
   {
